# stadata-x

./: .coveragerc  .gitignore  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
stadata_x/: __init__.py  api_client.py  app.py  config.py  main.py
stadata_x/assets/: app.css
stadata_x/screens/: dashboard_screen.py  dynamic_table_builder_screen.py  table_view_screen.py
stadata_x/widgets/: data_explorer.py  spinner.py
tests/: README.md  __init__.py  conftest.py
