# pyproject.toml

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stadata-x"
version = "0.1.0"
authors = [
  { name="Dzakwan Alifi", email="dzakwan624@gmail.com" },
]
description = "Terminal UI untuk menjelajahi dan mengunduh data BPS Indonesia secara interaktif"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Utilities",
    "Natural Language :: Indonesian",
]

dependencies = [
    "stadata>=0.1.0",
    "textual>=0.50.0",
    "plotext>=5.0.0",
    "pyfiglet>=0.8.0",
    "pandas>=1.3.0",
    "openpyxl>=3.0.0",
]

[project.scripts]
stadata-x = "stadata_x.main:run"

[project.optional-dependencies]
dev = [
    "textual-dev",   
    "ruff",           
]

[tool.setuptools.packages.find]
include = ["stadata_x*"]
exclude = ["assets*"]

[tool.ruff]
extend-exclude = ["**/app.css"]

[project.urls]
Homepage = "https://github.com/dzakwanalifi/stadata-x"
Repository = "https://github.com/dzakwanalifi/stadata-x.git"
Issues = "https://github.com/dzakwanalifi/stadata-x/issues"
Documentation = "https://github.com/dzakwanalifi/stadata-x#readme"
Changelog = "https://github.com/dzakwanalifi/stadata-x/blob/main/CHANGELOG.md"